a lil bug fix and view for future reply to comment

--- a/blog/templates/blog/comments/add_comment_to_post.html
+++ b/blog/templates/blog/comments/add_comment_to_post.html
@@ -1,13 +1,18 @@
 {% extends 'blog/comments/base_comments.html' %}
-{% load bootstrap5 %}
-{% load markdown_extra %}
+{% load project_tags %}
 
 {% block comments_main %}
-    <form method="POST" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
-        {% endbuttons %}
-    </form>
+    <div class="card formcard">
+        <div class="card-body">
+            <form method="post" novalidate>
+                <div class="text-danger">
+                    {{ form.non_field_errors }}
+                </div>
+
+                {% form form %}
+
+                <button type="submit" class="btn btn-primary">{{ title }}</button>
+            </form>
+        </div>
+    </div>
 {% endblock comments_main %}
