--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -2,11 +2,12 @@
 
 {% block main %}
     <h4>{{ question.question_text }}</h4>
-    <ul>
+
+    <ul class="mb-2">
         {% for choice in question.related_question.all %}
             <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
         {% endfor %}
     </ul>
 
-    <a class="btn btn-primary" href="{% url 'polls:detail' question.id %}">Vote again?</a>
+    <a class="btn btn-primary" href="{% url 'polls:detail' question.id %}">Vote again ?</a>
 {% endblock main %}
