--- a/settings_app/templates/settings_app/side_menu_setting.html
+++ b/settings_app/templates/settings_app/side_menu_setting.html
@@ -37,7 +37,7 @@
                                                 {% endif %}
                                                 "
                                                 {% if link.is_target_blank %}
-                                                    target="_blank"
+                                                    target="_blank" rel="noopener noreferrer"
                                                 {% endif %}
                                                 >{{ link.title }}
                                             </a>
@@ -52,7 +52,7 @@
                                                 {% endif %}
                                                 "
                                                 {% if link.is_target_blank %}
-                                                    target="_blank"
+                                                    target="_blank" rel="noopener noreferrer"
                                                 {% endif %}
                                                 >{{ link.title }}
                                             </a>
@@ -67,7 +67,7 @@
                                                 {% endif %}
                                                 "
                                                 {% if link.is_target_blank %}
-                                                    target="_blank"
+                                                    target="_blank" rel="noopener noreferrer"
                                                 {% endif %}
                                                 >{{ link.title }}
                                             </a>
@@ -83,7 +83,7 @@
                                     {% endif %}
                                     "
                                     {% if link.is_target_blank %}
-                                        target="_blank"
+                                        target="_blank" rel="noopener noreferrer"
                                     {% endif %}
                                     >{{ link.title }}
                                 </a>
