--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -50,7 +50,7 @@
                 {% if project.technology %}
                     <div class="card-text">
                         Made with:
-                        <a target="_blank" href="{{ project.technology.website }}">{{ project.technology }}</a>
+                        <a target="_blank" href="{{ project.technology.website }}" rel="noopener noreferrer">{{ project.technology }}</a>
                         <br />
                         <span>{{ project.technology.description }}</span>
                     </div>
