--- a/khoBlog/static/khoBlog/css/_variables.scss
+++ b/khoBlog/static/khoBlog/css/_variables.scss
@@ -239,6 +239,9 @@ $black-white: (
     'black': $black
 );
 
+$enable-grid-classes: true;
+$enable-cssgrid: false;
+
 $sans-serif: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
 $headings: 'Merriweather', 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
