--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -1,6 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load static %}
-{% load markdown_extra %}
+{% load static markdown_extra %}
 
 {% block page_top %}
 
