--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load static %}
-{% load comments %}
+{% load static comments %}
 
 {% block page_top_end %}
     <div class="btn-group float-end" role="group" aria-label="Previous / Next">
