--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -1,6 +1,5 @@
 {% extends 'sub_base.html' %}
-{% load widget_tweaks %}
-{% load project_tags %}
+{% load widget_tweaks project_tags %}
 
 {% block content %}
     {% if user.is_authenticated %}
