--- a/khoBlog/templates/account/email.html
+++ b/khoBlog/templates/account/email.html
@@ -1,7 +1,5 @@
 {% extends "sub_base.html" %}
-{% load bootstrap5 %}
-
-{% load i18n %}
+{% load i18n bootstrap5 %}
 
 {% block page_top_title %}
     {% trans "E-mail Addresses" %}
