--- a/khoBlog/templates/account/email_confirm.html
+++ b/khoBlog/templates/account/email_confirm.html
@@ -1,7 +1,5 @@
 {% extends "sub_base.html" %}
-
-{% load i18n %}
-{% load account %}
+{% load i18n account %}
 
 {% block page_top_title %}
     {% trans "Confirm E-mail Address" %}
