--- a/khoBlog/templates/authentication/includes/signup_form.html
+++ b/khoBlog/templates/authentication/includes/signup_form.html
@@ -1,6 +1,4 @@
-{% load static %}
-{% load widget_tweaks %}
-{% load project_tags %}
+{% load static widget_tweaks project_tags %}
 
 <div class="card formcard auth-card">
     <div class="card-body">
