--- a/khoBlog/templates/comments/form.html
+++ b/khoBlog/templates/comments/form.html
@@ -1,7 +1,4 @@
-{% load comments i18n %}
-{% load project_tags %}
-{% load widget_tweaks %}
-
+{% load i18n comments project_tags widget_tweaks %}
 
 {% if user.is_authenticated %}
     <div class="card formcard">
