--- a/khoBlog/templates/extras/form_extra.html
+++ b/khoBlog/templates/extras/form_extra.html
@@ -1,5 +1,4 @@
-{% load project_tags %}
-{% load widget_tweaks %}
+{% load project_tags widget_tweaks %}
 
 {% csrf_token %}
 {% for field in form %}
