--- a/khoBlog/templates/includes/nav/undernav.html
+++ b/khoBlog/templates/includes/nav/undernav.html
@@ -1,6 +1,4 @@
-{% load render_urls %}
-{% load links_menu %}
-{% load featured_post %}
+{% load render_urls links_menu featured_post %}
 
 <div class="nav-scroller shadow mb-2">
     <nav class="nav nav-underline d-flex justify-content-between">
