--- a/khoBlog/templates/sub_base.html
+++ b/khoBlog/templates/sub_base.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-{% load side_menu_set %}
-{% load project_tags %}
+{% load side_menu_set project_tags %}
 
 {% block nav %}
     {% sm_setting sides %}
