--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -1,6 +1,5 @@
 {% extends 'sub_base.html' %}
-{% load static %}
-{% load bootstrap5 %}
+{% load static bootstrap5 %}
 
 {% block content %}
     {% if user.is_superuser %}
