--- a/blog/templates/blog/create_series.html
+++ b/blog/templates/blog/create_series.html
@@ -1,6 +1,5 @@
 {% extends 'sub_base_main.html' %}
-{% load static %}
-{% load project_tags %}
+{% load static project_tags %}
 
 {% block main %}
     <div class="card formcard">
