--- a/blog/templates/blog/lists/tags_list.html
+++ b/blog/templates/blog/lists/tags_list.html
@@ -1,6 +1,5 @@
 {% extends 'blog/base_post.html' %}
-{% load static %}
-{% load markdown_extra %}
+{% load static markdown_extra %}
 
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3">
