--- a/blog/templates/blog/post_update.html
+++ b/blog/templates/blog/post_update.html
@@ -1,8 +1,5 @@
 {% extends 'sub_base_main.html' %}
-{% load static %}
-{% load widget_tweaks %}
-{% load project_tags %}
-{% load markdown_extra %}
+{% load static widget_tweaks project_tags markdown_extra %}
 
 {% block main %}
     <div class="card formcard">
