--- a/khoBlog/templates/account/connections.html
+++ b/khoBlog/templates/account/connections.html
@@ -1,7 +1,5 @@
 {% extends 'sub_base.html' %}
-{% load socialaccount %}
-
-{% load bootstrap5 %}
+{% load socialaccount bootstrap5 %}
 
 {% block content %}
     {% if form.accounts %}
