--- a/khoBlog/templates/authentication/includes/login_form.html
+++ b/khoBlog/templates/authentication/includes/login_form.html
@@ -1,5 +1,4 @@
-{% load static %}
-{% load project_tags %}
+{% load static project_tags %}
 
 <div class="card formcard auth-card">
     <div class="card-body">
