--- a/khoBlog/templates/extras/form_extra_get.html
+++ b/khoBlog/templates/extras/form_extra_get.html
@@ -1,5 +1,4 @@
-{% load project_tags %}
-{% load widget_tweaks %}
+{% load project_tags widget_tweaks %}
 
 {% for field in form %}
     <div class="field {{ field|widget_type }} mb-2">
