--- a/pages/templates/pages/page_update.html
+++ b/pages/templates/pages/page_update.html
@@ -1,6 +1,5 @@
 {% extends 'pages/base_page.html' %}
-{% load static %}
-{% load project_tags %}
+{% load static project_tags %}
 
 {% block main %}
     <div class="card formcard">
