--- a/portfolio/templates/portfolio/project_update.html
+++ b/portfolio/templates/portfolio/project_update.html
@@ -1,6 +1,5 @@
 {% extends 'sub_base_main.html' %}
-{% load static %}
-{% load project_tags %}
+{% load static project_tags %}
 
 {% block main %}
     <div class="card formcard">
