--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -113,7 +113,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm" aria-label="Main navigation">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'blog:post_list' %}">Khodok's Blog</a>
+            <a class="navbar-brand" href="{% url 'blog:post_list' %}">Khodok's {{ app_title }}</a>
             <button class="navbar-toggler p-0 border-0" type="button" id="top-navbar-collapse" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
