--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -6,6 +6,9 @@
         {% for page in pages %}
             <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
                 <div id="page-{{ page.slug }}" class="card shadow h-100">
+                    {% if page.withdrawn %}
+                        <span class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-danger p-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Withdrawn"><span class="visually-hidden">Withdrawn</span></span>
+                    {% endif %}
 
                     <div class="card-header">
                         <span class="d-flex">
