link to the repo in the footer

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -257,6 +257,11 @@
                     Version number: {{ APP_VERSION_NAME }}
                 </div>
                 <div class="col">
+                    <a href="{% url 'shortener:url_redirect' slug='khoblog-github-repo' %}">
+                        <i class="bi bi-github"></i> Github
+                    </a>
+                </div>
+                <div class="col">
                     Version code: {{ APP_VERSION_NUMBER }}
                 </div>
             </div>
