--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,7 +1,7 @@
 {% extends 'polls/base_polls.html' %}
 
 {% block main %}
-    <h4>{{ question.question_text }}</h4>
+    <h4>{{ question.title }}</h4>
     <a href="{% url 'polls:results' question.id %}">See the results without voting</a>
 
     {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
@@ -10,7 +10,7 @@
         {% csrf_token %}
         {% for choice in question.related_question.all %}
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+            <label for="choice{{ forloop.counter }}">{{ choice.title }}</label><br>
         {% endfor %}
         <input class="btn btn-primary mt-2" type="submit" value="Vote">
     </form>
