--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -3,7 +3,7 @@
 {% block main %}
     <ol class="list-unstyled mb-0">
         {% for question in latest_question_list %}
-            <li><a href="{% url 'polls:detail' question.id %}">{{ question.id }} - {{ question.question_text }}</a></li>
+            <li><a href="{% url 'polls:detail' question.id %}">{{ question.id }} - {{ question.title }}</a></li>
         {% empty %}
             <p>No polls are available.</p>
         {% endfor %}
