removed featured title because it wasn't useful

--- a/blog/templates/blog/create_post.html
+++ b/blog/templates/blog/create_post.html
@@ -24,19 +24,12 @@
                 <div class="field mb-2">
                     <div class="input-group">
                         <span class="input-group-text">Title</span>
-                        {{ form.title|add_class:"form-control w-50"|attr:"placeholder:Post title" }}
-                        {{ form.featured_title|add_class:"form-control"|attr:"placeholder:Post featured title" }}
+                        {{ form.title|add_class:"form-control"|attr:"placeholder:Post title" }}
                     </div>
                     {% if form.title.help_text %}
                         <span class="text-small text-muted">{{ form.title.help_text }}</span>
                     {% endif %}
-                    {% if form.featured_title.help_text %}
-                        <span class="text-small text-muted">{{ form.featured_title.help_text }}</span>
-                    {% endif %}
                     {% for error in form.title.errors %}
-                        <small class="form-text text-danger">{{ error }}</small>
-                    {% endfor %}
-                    {% for error in form.featured_title.errors %}
                         <small class="form-text text-danger">{{ error }}</small>
                     {% endfor %}
                 </div>
