--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -5,7 +5,7 @@
         <div class="card p-4 rounded shadow">
             <div class="container">
                 <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Post</strong>
-                <h1 class="display-4">{% if featured_big_post.featured_title %} {{ featured_big_post.featured_title }} {% else %} {{ featured_big_post.title }} {% endif %}</h1>
+                <h1 class="display-4">{{ featured_big_post.title }}</h1>
                 <p class="lead">{{ featured_big_post.description }}</p>
                 <a class="btn btn-primary" href="{{ featured_big_post.get_absolute_url }}">Continue Reading</a>
             </div>
@@ -30,7 +30,7 @@
                     </strong>
                 </div>
                 <div class="card-body">
-                    <h3 class="card-title text-word-wrap mb-0">{% firstof post.featured_title post.title %}</h3>
+                    <h3 class="card-title text-word-wrap mb-0">{{ post.title }}</h3>
                     <div class="mb-0">{% include 'blog/includes/post_dates.html' %}</div>
                     <p class="mb-2 text-small text-muted">
                         {% if post.body %}
