big design bug fixed
Noticed the lists (with three elements) weren't all the same size (some cards were longer than others), fixed it

--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -13,9 +13,9 @@
     {% endwith %}
 {% endif %}
 
-<div class="row row-cols-1 row-cols-lg-2">
+<div class="row row-cols-1 row-cols-lg-2 me-0">
     {% for post in featured %}
-        <div class="mt-2 {% cycle 'pe-lg-0' 'pe-kho-lg-12' %}">
+        <div class="mt-2 pe-lg-0">
             <div class="card shadow h-100">
                 <div class="card-header">
                     <strong>
