--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -69,9 +69,9 @@
 
 {% block content_main %}
 
-    <div class="row row-cols-1 row-cols-lg-3">
+    <div class="row row-cols-1 row-cols-lg-3 me-0">
         {% for post in posts %}
-            <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+            <div class="mb-2 pe-lg-0">
                 {% include 'blog/post_card_in_lists.html' %}
             </div>
 
