--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -196,7 +196,7 @@
 
     <main role="main" class="container-fluid mb-2">
         <div class="row">
-            <div class="col-xl-9 col-lg-9 col-lg-auto pe-0">
+            <div class="col-xl-9 col-lg-9 col-lg-auto pe-lg-0">
 
                 <div class="row clearfix">
                     <div class="col col-sm-auto">
