--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -15,7 +15,7 @@
 
 <div class="row row-cols-1 row-cols-lg-2 me-0">
     {% for post in featured %}
-        <div class="mt-2 pe-lg-0">
+        <div class="mt-2 pe-0">
             <div class="card shadow h-100">
                 <div class="card-header">
                     <strong>
