--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -71,7 +71,7 @@
 
     <div class="row row-cols-1 row-cols-lg-3 me-0">
         {% for post in posts %}
-            <div class="mb-2 pe-lg-0">
+            <div class="mb-2 pe-0">
                 {% include 'blog/post_card_in_lists.html' %}
             </div>
 
