--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -4,7 +4,7 @@
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3 me-0">
         {% for series in series_list %}
-            <div class="mb-2 pe-lg-0">
+            <div class="mb-2 pe-0">
                 <div id="series-{{ series.slug }}" class="card shadow h-100">
 
                     <div class="card-header">
