--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -7,7 +7,7 @@
             {% for element in query %}
                 {% if query|isinstance:'list' %}
                     {% for e in element %}
-                        <div class="mb-2 pe-lg-0">
+                        <div class="mb-2 pe-0">
                             <div id="element-{{ e.slug }}" class="card shadow h-100">
                                 <div class="card-header">
                                     <div class="d-flex">
@@ -52,7 +52,7 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <div class="mb-2 pe-lg-0">
+                    <div class="mb-2 pe-0">
                         <div id="element-{{ element.slug }}" class="card shadow h-100">
                             <div class="card-header">
                                 <span class="d-flex">
@@ -81,7 +81,7 @@
             {% endfor %}
         {% else %}
             {% for element in filter.qs %}
-                <div class="mb-2 pe-lg-0">
+                <div class="mb-2 pe-0">
                     <div id="element-{{ element.slug }}" class="card shadow h-100">
                         <div class="card-header">
                             <span class="d-flex">
