--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -23,7 +23,7 @@
 
     <div class="row row-cols-1 row-cols-lg-3 me-0">
         {% for project in projects %}
-            <div class="mb-2 pe-lg-0">
+            <div class="mb-2 pe-0">
                 <div id="project-{{ project.slug }}" class="card shadow h-100">
 
                     <div class="card-header">
