--- a/khoBlog/templates/account/connections.html
+++ b/khoBlog/templates/account/connections.html
@@ -18,7 +18,7 @@
                         <div>
                             <label for="id_account_{{ base_account.id }}">
                                 <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
-                                <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>
+                                <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{ account.get_brand.name }}</span>
                                 {{ account }}
                             </label>
                         </div>
@@ -45,6 +45,8 @@
     <a href="{% provider_login_url 'google' process='connect' next='/' %}">Connect a Gmail Account</a>
     <br>
     <a href="{% provider_login_url 'discord' process='connect' next='/'  %}">Connect a Discord Account</a>
+    <br />
+    <a href="{% provider_login_url 'github' process='connect' next='/'  %}">Connect a Github Account</a>
 
 
 {% endblock content %}
