--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -159,6 +159,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% provider_login_url 'discord' %}">Log in with Discord</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% provider_login_url 'github' %}">Log in with Github</a>
+                        </li>
 
                     {% endif %}
 
