--- a/khoBlog/templates/includes/nav/nav_auth.html
+++ b/khoBlog/templates/includes/nav/nav_auth.html
@@ -38,6 +38,7 @@
     <div class="btn-group-vertical d-block" role="group" aria-label="Group Provider Account">
         <a class="mb-0 btn btn-primary" href="{% provider_login_url 'google' %}"><i class="bi bi-google"></i></a>
         <a class="mb-0 btn btn-primary" href="{% provider_login_url 'discord' %}"><i class="bi bi-discord"></i></a>
+        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'github' %}"><i class="bi bi-github"></i></a>
     </div>
 
 {% endif %}
